log
Thu 23 Mar 2023 03:57:13 PM UTC: 
 list.c | 22 +++++++++++++++++-----
 1 file changed, 17 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
a909ff6
Thu 23 Mar 2023 03:58:02 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
fdd2dda
Thu 23 Mar 2023 03:59:04 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
ce97167
Thu 23 Mar 2023 03:59:33 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
369281f
Thu 23 Mar 2023 04:00:20 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
249cf6d
Thu 23 Mar 2023 04:00:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
fdc6ef5
Thu 23 Mar 2023 04:00:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1117a10
Thu 23 Mar 2023 04:01:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
73f610c
Thu 23 Mar 2023 04:02:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
49b3b78
Thu 23 Mar 2023 04:03:52 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bfeeeeb
Thu 23 Mar 2023 04:05:08 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6af8fba
Thu 23 Mar 2023 04:05:45 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
31c940d
Thu 23 Mar 2023 04:06:21 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
07666b8
Thu 23 Mar 2023 04:07:11 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
e775984
Thu 23 Mar 2023 04:09:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:54:28: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   54 |     return (list->current->dato);
      |                            ^~~~
      |                            data
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
87f3140
Thu 23 Mar 2023 04:09:28 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e78f4fd
Thu 23 Mar 2023 04:11:45 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
43b6d35
Thu 23 Mar 2023 04:14:13 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:55:28: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   55 |     return (list->current->dato);
      |                            ^~~~
      |                            data
list.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ee11345
Thu 23 Mar 2023 04:14:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
42b4eaf
Thu 23 Mar 2023 04:14:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
043b671
Thu 23 Mar 2023 04:15:09 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
705d314
Thu 23 Mar 2023 04:15:31 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
f19209c
Thu 23 Mar 2023 04:15:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5a52313
Thu 23 Mar 2023 04:16:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1220e85
Thu 23 Mar 2023 04:16:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
0de91bd
Thu 23 Mar 2023 04:19:38 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
20ccd24
Thu 23 Mar 2023 04:19:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1d2a09c
Thu 23 Mar 2023 04:20:15 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
20bd648
Thu 23 Mar 2023 04:23:36 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:9: error: unused variable ‘n’ [-Werror=unused-variable]
   45 |   Node* n = list->head;
      |         ^
cc1: all warnings being treated as errors
Compilation failed
63ac493
Thu 23 Mar 2023 04:28:08 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
e2c9c8d
Thu 23 Mar 2023 04:30:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
115083c
Sat 25 Mar 2023 08:12:42 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
8d118ae
Sat 25 Mar 2023 08:13:35 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
d8e4b9f
Sat 25 Mar 2023 08:14:37 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
4b20856
Sat 25 Mar 2023 08:15:28 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
d40bc86
Sat 25 Mar 2023 08:15:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
7aa3ebf
Sat 25 Mar 2023 08:15:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
f2bac6c
Sat 25 Mar 2023 08:16:30 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
355e06f
Sat 25 Mar 2023 08:16:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
2b4e429
Sat 25 Mar 2023 08:17:58 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
dea309b
Sat 25 Mar 2023 08:18:34 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:66:8: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   66 |   if ( lista->head == NULL;  || list->current == list->head->data) return NULL;
      |        ^~~~~
      |        list
list.c:66:8: note: each undeclared identifier is reported only once for each function it appears in
list.c:66:27: error: expected ‘)’ before ‘;’ token
   66 |   if ( lista->head == NULL;  || list->current == list->head->data) return NULL;
      |      ~                    ^
Compilation failed
dfd7ff5
Sat 25 Mar 2023 08:18:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:66:8: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   66 |   if ( lista->head == NULL  || list->current == list->head->data) return NULL;
      |        ^~~~~
      |        list
list.c:66:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
2a0faed
Sat 25 Mar 2023 08:18:46 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
b0c2519
